--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-pdf/renderer": "^1.6.12",
-    "@sendgrid/mail": "^7.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -49,5 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://digital-shi.github.io"
+  "homepage": "https://digital-shi.github.io/digital-shi/"
 }
