--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
   "name": "SLP Platform",
   "icons": [
     {
-      "src": "ucsf.jpg",
-      "type": "image/jpg",
+      "src": "shi.png",
+      "type": "image/png",
       "sizes": "192x192"
     }
   ],
